Fix: fixing yaml sintax for the workflow

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,10 +33,11 @@ jobs:
 
 workflow:
   default_workflow:
-    - build
-    - test:
-        requires:
-          - build
-    - analyze:
-        requires:
-          - test
+    jobs:
+      - build
+      - test:
+          requires:
+            - build
+      - analyze:
+          requires:
+            - test
