--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,7 +31,7 @@ jobs:
             - "npm-packages"
       - run: npm audit
 
-workflow:
+workflows:
   default_workflow:
     jobs:
       - build
